@@ -1,3 +1,8 @@
+2006-07-24  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview.c: fix tab key issues when inserting
+	spaces instead of tabs. Bug #343755.
+
 === gtksourceview 1.7.1 ===
 
 2006-07-24  Paolo Borelli  <pborelli@katamail.com>
